--- a/test2/Base.lproj/Main.storyboard
+++ b/test2/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aXN-WV-H1Z">
-    <device id="ipad10_5" orientation="landscape">
+    <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -30,18 +30,18 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sDa-uK-LTx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-272" y="113"/>
+            <point key="canvasLocation" x="-644" y="111"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="F8n-Rc-rrB">
             <objects>
                 <viewController id="xvl-TD-cQ0" customClass="ViewController" customModule="test2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zsf-ig-fbk">
-                        <rect key="frame" x="0.0" y="0.0" width="1112" height="834"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="thumbs_cartoon-farm-vector1.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="o5B-Ie-H9t">
-                                <rect key="frame" x="0.0" y="0.0" width="1112" height="834"/>
+                                <rect key="frame" x="0.0" y="-33" width="1024" height="801"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZHq-ZP-XW2">
@@ -53,8 +53,13 @@
                                 <state key="normal" title="Start Game">
                                     <color key="titleColor" red="0.18734363739047366" green="0.25420193464446306" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <action selector="onClick:" destination="xvl-TD-cQ0" eventType="touchUpInside" id="qH9-Ch-2jB"/>
+                                    <segue destination="fZs-Np-QL8" kind="show" id="HxL-U7-FRf"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Math Farm Demo" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6cG-qp-WRj">
@@ -63,7 +68,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <accessibility key="accessibilityConfiguration" label="Math Farm Demo"/>
                                 <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="47"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" red="0.18734363740000001" green="0.25420193460000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -71,30 +76,75 @@
                     </view>
                     <navigationItem key="navigationItem" id="vao-4R-gaC"/>
                     <connections>
-                        <outlet property="button" destination="ZHq-ZP-XW2" id="HrG-xl-O2U"/>
+                        <segue destination="fZs-Np-QL8" kind="show" action="showDetailViewController:sender:" id="qQ7-uv-zIy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZNS-8y-9ZL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="445.14388489208636" y="112.23021582733814"/>
+            <point key="canvasLocation" x="444.72656249999994" y="111.71875"/>
+        </scene>
+        <!--Level Select Controller-->
+        <scene sceneID="cfT-Nv-j9R">
+            <objects>
+                <viewController id="fZs-Np-QL8" customClass="LevelSelectController" customModule="test2" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="j05-1k-G3h">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="thumbs_cartoon-farm-vector3.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="TZq-Pt-0MM">
+                                <rect key="frame" x="0.0" y="-33" width="1024" height="801"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Select Level" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rza-PQ-E6i">
+                                <rect key="frame" x="346" y="55" width="325" height="71"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <accessibility key="accessibilityConfiguration" label="Select Level"/>
+                                <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="41"/>
+                                <color key="textColor" red="0.18734363740000001" green="0.25420193460000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kVq-mv-i34">
+                                <rect key="frame" x="43" y="307" width="193" height="74"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <accessibility key="accessibilityConfiguration" label="Counting. Learn to Count!"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="33"/>
+                                <state key="normal" title="Counting"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="toCountingLevel:" destination="fZs-Np-QL8" eventType="touchUpInside" id="A8f-UC-NcK"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="ftl-Mg-n4Z"/>
+                    </view>
+                    <connections>
+                        <outlet property="CountingBtn" destination="kVq-mv-i34" id="JGP-2a-HCq"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lnr-PA-MBJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="443.55468749999994" y="1006.25"/>
         </scene>
         <!--Game View Controller-->
         <scene sceneID="ujK-g4-fdG">
             <objects>
-                <viewController storyboardIdentifier="GameViewController1" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ucJ-tZ-mF5" customClass="GameViewController" customModule="test2" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="YgJ-Af-YXk">
-                        <rect key="frame" x="0.0" y="0.0" width="1112" height="834"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="e1K-PB-zNQ"/>
-                    </view>
-                </viewController>
+                <viewController storyboardIdentifier="GameViewController1" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ucJ-tZ-mF5" customClass="GameViewController" customModule="test2" customModuleProvider="target" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ldH-EI-I7J" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1117" y="139"/>
+            <point key="canvasLocation" x="1512" y="113"/>
         </scene>
     </scenes>
     <resources>
         <image name="thumbs_cartoon-farm-vector1.jpg" width="436" height="300"/>
+        <image name="thumbs_cartoon-farm-vector3.jpg" width="374" height="300"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="HxL-U7-FRf"/>
+    </inferredMetricsTieBreakers>
 </document>
