solved the issue of loading GameScene and AdditionScene twice on GameViewController; tentatively added a SKScene for level selection to see if screen freeze bug would occur

--- a/test2/Base.lproj/Main.storyboard
+++ b/test2/Base.lproj/Main.storyboard
@@ -250,9 +250,12 @@
         <scene sceneID="ujK-g4-fdG">
             <objects>
                 <viewController storyboardIdentifier="GameViewController1" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ucJ-tZ-mF5" customClass="GameViewController" customModule="test2" customModuleProvider="target" sceneMemberID="viewController">
-                    <connections>
-                        <segue destination="fZs-Np-QL8" kind="show" identifier="backToLevel" id="HXx-BY-7pG"/>
-                    </connections>
+                    <view key="view" contentMode="scaleToFill" id="Nt1-T6-Xg6" customClass="SKView">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="OEZ-xH-Reb"/>
+                    </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ldH-EI-I7J" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -391,7 +394,6 @@
         <image name="thumbs_cartoon-farm-vector3" width="374" height="300"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="HXx-BY-7pG"/>
         <segue reference="cyl-Xf-buc"/>
     </inferredMetricsTieBreakers>
 </document>
